Conexion con firebase
Cuando se inicia el proyecto se inicializa la conexion con firebase.
Se agrego la dependencia de firebase

--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,13 @@
             <artifactId>reactor-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.firebase</groupId>
+            <artifactId>firebase-admin</artifactId>
+            <version>8.1.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
