--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
             <version>8.1.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
