feat: add verificarExistenciaUsuarioMongoYFirebaseParaCrearUsuario en CrearUsuarioUsecase

--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,16 @@
             <artifactId>hibernate-validator</artifactId>
             <version>6.0.16.Final</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.22</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.firebase</groupId>
+            <artifactId>firebase-admin</artifactId>
+            <version>8.1.0</version>
+        </dependency>
     </dependencies>
 
     <build>
