--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,2 @@
-spring.data.mongodb.database=proyectoFinal
-
-#spring.data.mongodb.uri=${MONGO_URI:mongodb://localhost:27017}
-#spring.data.mongodb.database=${MONGO_DB:Parches}
+spring.data.mongodb.uri=${MONGO_URI:mongodb://localhost:27017}
+spring.data.mongodb.database=${MONGO_DB:Parches}
