Se actualiza cambios desde principal

--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
             <groupId>com.google.firebase</groupId>
             <artifactId>firebase-admin</artifactId>
             <version>8.1.0</version>
+        </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.sonarsource.scanner.gradle/sonarqube-gradle-plugin -->
         <dependency>
